fix style on profile component

--- a/src/components/Routes-Component/Cart-Component/cart.scss
+++ b/src/components/Routes-Component/Cart-Component/cart.scss
@@ -2,23 +2,50 @@ $color-border: #eee;
 $color-label: #aaa;
 $font-default: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
-.product-image { float: left; width: 20%; }
-.product-details { float: left; width: 37%; }
-.product-price { float: left; width: 12%; }
-.product-quantity { float: left; width: 10%; }
-.product-removal { float: left; width: 9%; }
-.product-line-price { float: left; width: 12%; text-align: right; }
+
+.product-image {
+  float: left;
+  width: 20%;
+}
+
+.product-details {
+  float: left;
+  width: 37%;
+}
+
+.product-price {
+  float: left;
+  width: 12%;
+}
+
+.product-quantity {
+  float: left;
+  width: 10%;
+}
+
+.product-removal {
+  float: left;
+  width: 9%;
+}
+
+.product-line-price {
+  float: left;
+  width: 12%;
+  text-align: right;
+}
 
 .group:before,
 .group:after {
-    content: '';
-    display: table;
-} 
-.group:after {
-    clear: both;
+  content: '';
+  display: table;
 }
+
+.group:after {
+  clear: both;
+}
+
 .group {
-    zoom: 1;
+  zoom: 1;
 }
 
 $color-border: #eee;
@@ -26,30 +53,61 @@ $color-label: #aaa;
 $font-default: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
 
-.product-image { float: left; width: 20%; }
-.product-details { float: left; width: 37%; }
-.product-price { float: left; width: 12%; }
-.product-quantity { float: left; width: 10%; }
-.product-removal { float: left; width: 9%; }
-.product-line-price { float: left; width: 12%; text-align: right; }
+.product-image {
+  float: left;
+  width: 20%;
+}
+
+.product-details {
+  float: left;
+  width: 37%;
+}
+
+.product-price {
+  float: left;
+  width: 12%;
+}
+
+.product-quantity {
+  float: left;
+  width: 10%;
+}
+
+.product-removal {
+  float: left;
+  width: 9%;
+}
+
+.product-line-price {
+  float: left;
+  width: 12%;
+  text-align: right;
+}
 
 .group:before,
 .group:after {
-    content: '';
-    display: table;
-} 
-.group:after {
-    clear: both;
-}
-.group {
-    zoom: 1;
+  content: '';
+  display: table;
 }
 
-.shopping-cart, .column-labels, .product, .totals-item {
+.group:after {
+  clear: both;
+}
+
+.group {
+  zoom: 1;
+}
+
+.shopping-cart,
+.column-labels,
+.product,
+.totals-item {
   @extend .group;
 }
 
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
+.product .product-price:before,
+.product .product-line-price:before,
+.totals-value:before {
   content: '$';
 }
 
@@ -72,45 +130,47 @@ label {
     padding-top: 20px;
     border-top: 1px solid $color-border;
   }
-  
+
   .column-labels {
     display: none;
   }
-  
+
   .product-image {
     float: right;
     width: auto;
+
     img {
       margin: 0 0 10px 10px;
     }
   }
-  
+
   .product-details {
     float: none;
     margin-bottom: 10px;
     width: auto;
   }
-  
+
   .product-price {
     clear: both;
     width: 70px;
   }
-  
+
   .product-quantity {
     width: 100px;
+
     input {
       margin-left: 20px;
     }
   }
-  
+
   .product-quantity:before {
     content: 'x';
   }
-  
+
   .product-removal {
     width: auto;
   }
-  
+
   .product-line-price {
     float: right;
     width: 70px;
@@ -122,24 +182,24 @@ label {
   .product-removal {
     float: right;
   }
-  
+
   .product-line-price {
     float: right;
     clear: left;
     width: auto;
     margin-top: 10px;
   }
-  
+
   .product .product-line-price:before {
     content: 'Item Total: $';
   }
-  
+
   .totals {
     .totals-item {
       label {
         width: 60%;
       }
-      
+
       .totals-value {
         width: 40%;
       }
@@ -147,13 +207,18 @@ label {
   }
 }
 
-.shopping-cart, .column-labels, .product, .totals-item {
+.shopping-cart,
+.column-labels,
+.product,
+.totals-item {
   @extend .group;
 }
 
 
 
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
+.product .product-price:before,
+.product .product-line-price:before,
+.totals-value:before {
   content: '$';
 }
 
@@ -168,53 +233,58 @@ label {
 .shopping-cart {
   margin-top: -45px;
 }
+
 .column-labels {
   label {
     padding-bottom: 15px;
     margin-bottom: 15px;
     border-bottom: 1px solid $color-border;
-    margin-top : 40px;
+    margin-top: 40px;
 
   }
-  
-  .product-image, .product-details, .product-removal {
+
+  .product-image,
+  .product-details,
+  .product-removal {
     text-indent: -9999px;
   }
 }
 
 
 .product {
-    padding-top : 30px;
+  padding-top: 30px;
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid $color-border;
   margin-right: 30px;
-  
+
   .product-image {
     text-align: center;
+
     img {
       width: 100px;
     }
   }
-  
+
   .product-details {
     .product-title {
       margin-right: 20px;
       font-family: $font-bold;
     }
+
     .product-description {
       margin: 5px 20px 5px 0;
       line-height: 1.4em;
     }
   }
-  
+
   .product-quantity {
     input {
       width: 40px;
-      
+
     }
   }
-  
+
   .remove-product {
     border: 0;
     padding: 4px 8px;
@@ -224,7 +294,7 @@ label {
     font-size: 12px;
     border-radius: 3px;
   }
-  
+
   .remove-product:hover {
     background-color: #a44;
   }
@@ -238,21 +308,21 @@ label {
     clear: both;
     width: 100%;
     margin-bottom: 10px;
-    
+
     label {
       float: left;
       clear: both;
       width: 79%;
       text-align: right;
     }
-    
+
     .totals-value {
       float: right;
       width: 21%;
       text-align: right;
     }
   }
-  
+
   .totals-item-total {
     font-family: $font-bold;
   }
@@ -275,80 +345,83 @@ label {
 
 /* Make adjustments for tablet */
 @media screen and (max-width: 650px) {
-  
+
   .shopping-cart {
     margin: 0;
     padding-top: 20px;
     border-top: 1px solid $color-border;
   }
-  
+
   .column-labels {
     display: none;
   }
-  
+
   .product-image {
     float: right;
     width: auto;
+
     img {
       margin: 0 0 10px 10px;
     }
   }
-  
+
   .product-details {
     float: none;
     margin-bottom: 10px;
     width: auto;
   }
-  
+
   .product-price {
     clear: both;
     width: 70px;
   }
-  
+
   .product-quantity {
     width: 100px;
+
     input {
       margin-left: 20px;
     }
   }
-  
+
   .product-quantity:before {
     content: 'x';
   }
-  
+
   .product-removal {
     width: auto;
   }
-  
+
   .product-line-price {
     float: right;
     width: 70px;
   }
-  
+
 }
+
 @media screen and (max-width: 350px) {
-  
+
   .product-removal {
     float: right;
   }
-  
+
   .product-line-price {
     float: right;
     clear: left;
     width: auto;
     margin-top: 10px;
   }
-  
+
   .product .product-line-price:before {
     content: 'Item Total: $';
   }
-  
+
   .totals {
     .totals-item {
       label {
         width: 60%;
       }
-      
+
       .totals-value {
         width: 40%;
       }
